# jupyterhub-usage-quota-service

./: .gitignore  Dockerfile  Dockerfile.jupyterhub  README.md  docker-compose.yml  jupyterhub_config.py  pyproject.toml
.github/workflows/: ci.yml
helm/jupyterhub-usage-quota-service/: Chart.yaml  values.schema.yaml  values.yaml
helm/jupyterhub-usage-quota-service/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  secret.yaml  service.yaml
src/jupyterhub_usage_quota/: __init__.py
src/jupyterhub_usage_quota/service/: __init__.py  app.py  prometheus_client.py
src/jupyterhub_usage_quota_service/: __init__.py  jupyterhub_custom_handler.py
src/jupyterhub_usage_quota_service/app/: app.py  prometheus_client.py
src/jupyterhub_usage_quota_service/templates/: usage.html
tests/: __init__.py  conftest.py  test_api.py  test_app.py  test_auth.py  test_integration.py  test_jupyterhub_handler.py  test_prometheus.py  test_templates.py
tests/fixtures/: __init__.py  prometheus_responses.py
