[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterhub-usage-quota-service"
version = "0.1.0"
description = "A JupyterHub service to display user storage (and eventually compute) quota and usage"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Tarashish Mishra", email = "tarashish@developmentseed.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Framework :: Jupyter",
]

dependencies = [
    "jupyterhub>=2.4.0",
    "fastapi[standard]",
    "aiohttp>=3.8",
    "jinja2>=3.0",
    "itsdangerous>=2.0",  # Required by starlette SessionMiddleware
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",         # Coverage reporting
    "respx>=0.20",             # Mock httpx requests (for JupyterHub API)
    "pytest-mock>=3.10",       # Enhanced mocking capabilities
    "beautifulsoup4>=4.11",    # HTML parsing for template tests
    "freezegun>=1.2",          # Time mocking for timestamps
    "ruff>=0.4",
    "mypy>=1.0",
    "pre-commit>=3.0",
]

[project.urls]
Homepage = "https://github.com/2i2c-org/jupyterhub-usage-quota-service"
Repository = "https://github.com/2i2c-org/jupyterhub-usage-quota-service"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyterhub_usage_quota_service"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
