[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jupyterhub-usage-quota-service"
version = "0.1.0"
description = "A JupyterHub service to display user storage (and eventually compute) quota and usage"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Tarashish Mishra", email = "tarashish@developmentseed.org"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "jupyterhub>=5.0",
    "fastapi[standard]>=0.100",
    "jinja2>=3.1",
    "itsdangerous>=2.2",  # Required by starlette SessionMiddleware
    "httpx>=0.28",
]

[project.urls]
Homepage = "https://github.com/2i2c-org/jupyterhub-usage-quota-service"
Repository = "https://github.com/2i2c-org/jupyterhub-usage-quota-service"

[tool.hatch.build.targets.wheel]
packages = ["src/jupyterhub_usage_quota_service"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
]

[tool.ruff.lint.per-file-ignores]
"jupyterhub_config.py" = ["F821"]  # c is injected by JupyterHub at runtime

[tool.ruff.format]
quote-style = "double"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-asyncio>=1.0",
    "pytest-cov>=7.0",         # Coverage reporting
    "respx>=0.22",             # Mock httpx requests (for JupyterHub API)
    "pytest-mock>=3.15",       # Enhanced mocking capabilities
    "beautifulsoup4>=4.14",    # HTML parsing for template tests
    "freezegun>=1.5",          # Time mocking for timestamps
    "ruff>=0.15",
    "mypy>=1.19",
    "pre-commit>=4.0",
    "pyflakes>=3.4",
    "vulture>=2.14",
]
